2007-02-13  Satoshi Konno <skonno@cybergarage.org>
	* Fixed cg_str2*() to return 0 when the parameter is null.

2007-02-01  Satoshi Konno <skonno@cybergarage.org>
	* Fixed cg_http_request_post() not to hung up when the request method is HEAD.
	* Added a onlyHeader parameter to cg_http_response_read() and cg_http_response_packet().
	* Added CG_HTTP_USERAGENT when CyberLink doesn't use CURL.

2007-01-30  Satoshi Konno <skonno@cybergarage.org>
	* Fixed to compile normally on the release mode for Windows Mobile.
	
2007-01-19  Satoshi Konno <skonno@cybergarage.org>
	* Added USE_CFILE define and --enable-cfile option to disable the file functions as default.
	* Disabled cg_file*() as default.
	* Disabled cg_upnp_device_loaddescriptionfile() as default.
	* Added cg_filelist_*().
	* Added cg_file_listfiles().

2007-01-17  Satoshi Konno <skonno@cybergarage.org>
	* Fixed to compile normally for WindowsCE platforms using Visual Studio 2005 and Windows Mobile 5.0 Pocket PC SDK.
	* Changed WindowsCE flags from _WIN32_WCE to WINCE.
	* Added time() and localtime() in src/cybergarage/util/ctime_win32.c only for WINCE platforms.
	* Changed cg_log_print() for WIN32 platforms.
	* Changed to use cg_strdup() instead of strdup() in clog.c.

2007-01-13  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_http_request_settimeout() and cg_http_request_gettimeout().
	* Added cg_http_response_settimeout() and cg_http_response_gettimeout().
	* Added cg_http_server_settimeout() and cg_http_server_gettimeout().

2006-12-06  Satoshi Konno <skonno@cybergarage.org>
	* v2.0

2006-11-13  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_net_interface_setnetmask() and cg_net_interface_getnetmask().

2006-10-31  Mikael Saarenpaa <ext-mikael.saarenpaa@nokia.com>
	* Removed deadlock from ipchanged routine.
	* Added rough but useful mutex debugging code.

2006-10-23  Mikael Saarenpaa <ext-mikael.saarenpaa@nokia.com>
	* Allowing M-POST messages to be handled correctly.
